# EGoTouchRev-rebuild

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  implementation_plan.md.resolved  架构.md  架构规划.md
App/include/: Coordinator.h  DiagnosticUI.h  RingBuffer.h
App/source/: Coordinator.cpp  DiagnosticUI.cpp  main.cpp
Common/: Logger.cpp  Logger.h
Device/include/: HimaxChip.h  HimaxProtocol.h
Device/source/: HimaxChip.cpp  HimaxProtocol.cpp  HimaxRegisters.cpp
EGoTouchService/source/: main.cpp
Engine/include/: BaselineSubtraction.h  CentroidExtractor.h  DynamicDeadzoneFilter.h  EngineTypes.h  FramePipeline.h  IFrameProcessor.h  SignalConditioningFilter.h  SpatialSharpenFilter.h
Engine/source/: BaselineSubtraction.cpp  CentroidExtractor.cpp  DynamicDeadzoneFilter.cpp  FramePipeline.cpp  MasterFrameParser.cpp  SpatialSharpenFilter.cpp
HimaxChipCore/header/: FrameProcess.h  HimaxChip.h  HimaxChipCore.h  HimaxCommon.h  HimaxHal.h  HimaxLogger.h  HimaxPlatform.h  HimaxProtocol.h  HimaxRegisters.h
HimaxChipCore/source/: FrameProcess.cpp  HimaxChip.cpp  HimaxChipCore.cpp  HimaxHal.cpp  HimaxLogger.cpp  HimaxPlatform.cpp  HimaxProtocol.cpp  HimaxRegisters.cpp
Host/source/: dummy.cpp
Service/source/: SystemDectector.cpp
docs/: Advanced_Filtering_Algorithms.md  TECHNICAL_DETAILS.md
